# krabby

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _kb.sh  _kb_cd.zsh  krabby.db  krabby.example.toml  krabby.toml  krabby.toml.example  tarpaulin.toml
.github/: check-and-test.yml
.github/workflows/: audit.yml  check-and-test.yml  code-health.yml  publish.yml
scripts/: kb.sh
src/: commands.rs  database.rs  hook.rs  lib.rs  main.rs  messages.rs  project.rs  project_info.rs  script.rs  shell.rs
